[gd_scene format=3 uid="uid://5w6yk4d6sf0j"]

[ext_resource type="Script" uid="uid://blrxmxolsws31" path="res://barkley2/scenes/Objects/_minigames/VRW/untamo/o_mg_vrw_object.gd" id="1_31qxo"]
[ext_resource type="PackedScene" uid="uid://dhjor6bbrq710" path="res://barkley2/scenes/Objects/_minigames/VRW/untamo/o_mg_vrw_untamo.tscn" id="2_ichxc"]

[node name="o_mg_vrw_object" type="RigidBody2D" unique_id=520902013]
mass = 999.0
gravity_scale = 0.0
script = ExtResource("1_31qxo")

[node name="o_mg_vrw_untamo_left" parent="." unique_id=169921170 instance=ExtResource("2_ichxc")]
position = Vector2(-1060, 0)

[node name="o_mg_vrw_untamo_middle" parent="." unique_id=525711498 instance=ExtResource("2_ichxc")]

[node name="o_mg_vrw_untamo_right" parent="." unique_id=373362652 instance=ExtResource("2_ichxc")]
position = Vector2(1060, 0)
